--- a/.github/workflows/test-react.yml
+++ b/.github/workflows/test-react.yml
@@ -16,3 +16,20 @@ jobs:
         run: npm ci
       - name: Run tests
         run: npm test
+  deploy:
+    # set needs for working after another job
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: actions/checkout@v4
+      - name: Install node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - name: Install dependencies
+        run: npm ci
+      - name: Build project
+        run: npm run build
+      - name: Deploy
+        run: echo "Dploying..."
