--- a/.github/workflows/pratice-artifacts.yml
+++ b/.github/workflows/pratice-artifacts.yml
@@ -47,5 +47,7 @@ jobs:
           name: dist-files
       - name: Output contents
         run: ls
+      - name: Get publish JS filename
+        run: echo "${{ needs.build.outputs.script-file }}"
       - name: Deploy
         run: echo "Deploying..."
