--- a/.github/workflows/pratice-matrix.yml
+++ b/.github/workflows/pratice-matrix.yml
@@ -1,8 +1,9 @@
 name: Matrix Demo
-on:
-  push:
-    branches:
-      - master
+# on:
+#   push:
+#     branches:
+#       - master
+on: workflow_dispatch
 jobs:
   build:
     continue-on-error: true
