--- a/.github/workflows/pratice-execution-flow.yml
+++ b/.github/workflows/pratice-execution-flow.yml
@@ -72,6 +72,8 @@ jobs:
   deploy:
     needs: build
     uses: ./.github/workflows/reusable-deploy.yml
+    with:
+      artifact-name: dist-files
   report:
     needs: [lint, deploy]
     if: failure()
