--- a/.github/workflows/pratice-execution-flow.yml
+++ b/.github/workflows/pratice-execution-flow.yml
@@ -74,6 +74,8 @@ jobs:
     uses: ./.github/workflows/reusable-deploy.yml
     with:
       artifact-name: dist-files
+    secrets:
+      some-secret: ${{ secrets.MONGODB_USERNAME }}
   report:
     needs: [lint, deploy]
     if: failure()
