--- a/.github/workflows/reusable-deploy.yml
+++ b/.github/workflows/reusable-deploy.yml
@@ -7,6 +7,9 @@ on:
         required: false
         default: dist
         type: string
+    secrets:
+      some-secret:
+        required: true
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -17,5 +20,7 @@ jobs:
           name: ${{ inputs.artifact-name }}
       - name: List files
         run: ls -l
+      - name: Check secret
+        run: echo "The secret ${{ secrets.some-secret }}"
       - name: Output information
         run: echo "Deploying & uploading..."
