--- a/.github/workflows/pratice-execution-flow.yml
+++ b/.github/workflows/pratice-execution-flow.yml
@@ -76,6 +76,12 @@ jobs:
       artifact-name: dist-files
     secrets:
       some-secret: ${{ secrets.MONGODB_USERNAME }}
+  deploy-result:
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print output
+        run: echo "${{ needs.deploy.outputs.result }}"
   report:
     needs: [lint, deploy]
     if: failure()
