--- a/.github/workflows/pratice-execution-flow.yml
+++ b/.github/workflows/pratice-execution-flow.yml
@@ -1,8 +1,9 @@
 name: Website Deployment
-on:
-  push:
-    branches:
-      - master
+# on:
+#   push:
+#     branches:
+#       - master
+on: workflow_dispatch
 jobs:
   lint:
     runs-on: ubuntu-latest
