--- a/.github/workflows/pratice-with-container-flow.yml
+++ b/.github/workflows/pratice-with-container-flow.yml
@@ -5,6 +5,7 @@ on:
       - master
       - dev
 env:
+  CACHE_KEY: node-deps
   MONGODB_DB_NAME: gha-demo
 jobs:
   test:
@@ -31,13 +32,22 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.npm
-          key: npm-deps-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ env.CACHE_KEY }}-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
-        run: cd backend && npm ci
+        run: |
+          cd backend
+          npm ci
       - name: Run server
-        run: cd backend && npm start & npx wait-on http://127.0.0.1:$PORT
+        run: |
+          cd backend
+          npm start & npx wait-on http://127.0.0.1:$PORT
       - name: Run tests
-        run: cd backend && npm test
+        run: |
+          cd backend
+          npm test
+      - name: Output information
+        run: |
+          echo "MONGODB_USERNAME: $MONGODB_USERNAME"
   deploy:
     needs: test
     runs-on: ubuntu-latest
