--- a/.github/workflows/pratice-with-container-flow.yml
+++ b/.github/workflows/pratice-with-container-flow.yml
@@ -25,6 +25,12 @@ jobs:
         env:
           MONGODB_USERNAME: root
           MONGODB_PASSWORD: password
+        options: >-
+          --health-cmd "echo 'db.runCommand("ping").ok' | mongosh --quiet"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+          --name mongo_container
     steps:
       - name: Get Code
         uses: actions/checkout@v4
