--- a/.github/workflows/pratice-with-container-flow.yml
+++ b/.github/workflows/pratice-with-container-flow.yml
@@ -17,8 +17,8 @@ jobs:
       mongodb:
         image: mongo
         env:
-          MONGODB_USERNAME: root
-          MONGODB_PASSWORD: password
+          MONGO_INITDB_ROOT_USERNAME: root
+          MONGO_INITDB_ROOT_PASSWORD: password
         options: >-
           --health-cmd "echo 'db.runCommand("ping").ok' | mongosh --quiet"
           --health-interval 10s
@@ -32,6 +32,12 @@ jobs:
       MONGODB_PASSWORD: password
       PORT: 8080
     steps:
+      - name: Check enviroments
+        run: |
+          echo "${{env.MONGODB_CONNECTION_PROTOCOL}}"
+          echo "${{env.MONGODB_CLUSTER_ADDRESS}}"
+          echo "${{env.MONGODB_USERNAME}}"
+          echo "${{env.MONGODB_PASSWORD}}"
       - name: Get Code
         uses: actions/checkout@v4
       - name: Cache dependencies
